@@ -106,6 +106,7 @@ Changes for v2.00
 - If deleting a device upgrade would delete corresponding protocol upgrade, ask for confirmation (Graham)
 - If changing the protocol of a device upgrade would delete a protocol upgrade, add that upgrade to Protocols tab (Graham)
 - Prevent change of pid when editing protocol upgrade but not when cloning it (Graham)
+- Fix bug in opening .ir file with device combiner as a protocol upgrade (Graham)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
